# basilisk_mockup

./: .gitignore  CHANGELOG.md  README.md  build_wheel.py  conanfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: blank.yml  build_wheel.yml  pull-request.yml
basilisk_mockup/: main.py
dist3/Basilisk/: __init__.py
dist3/Basilisk_Sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/example/: __init__.py
src/swig_example_demo/: __init__.py
tests/: coverage.conf  test_example.py  test_simple.py  test_stl_example.py
