[build-system]
requires = ["pdm-backend>=2.0.6,<3.0.0"]
build-backend = "pdm.backend"

[project]
name = "basilisk_mockup"
dynamic = ["version"]
description = "To test CI with Basilisk"
authors = [
    { name = "Yann BLAUDIN DE THE", email = "ydethe@gmail.com" },
]
keywords = [
    
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [

]
requires-python = ">=3.8"

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/basilisk_mockup/issues"
Homepage = "https://github.com/ydethe/basilisk_mockup"
Source = "https://github.com/ydethe/basilisk_mockup"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.tox]
legacy_tox_ini = """
    [tox]
    env_list = py{38,39,310}
    isolated_build = true

    [testenv]
    groups = dev
    commands =
        pdm run pytest
"""

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--html=htmldoc/tests/report.html",
    "--self-contained-html",
    "--junitxml=htmldoc/junit.xml",
    "--cov-config=tests/coverage.conf",
    "--cov=basilisk_mockup",
    "--doctest-modules",
]
testpaths = [
    "tests/",
]

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
includes = [
    "basilisk_mockup/",
]
excludes = [
    "tests",
    "build",
    "dist",
]

[tool.pdm.dev-dependencies]
dev = [
    "coverage-badge>=1.1.0",
    "docstr-coverage>=2.2.0",
    "ipython>=7.23.1",
    "pre-commit",
    "snakeviz>=2.1.2",
]
maintain = [
    "black==22.3.0",
    "blacken-docs==1.12.1",
    "git-changelog>=1.0",
]
quality = [
    "mypy>=1.2.0",
    "ruff>=0.0.246",
]
doc = [
    "pdoc3>=0.10.0",
    "pylint>=2.15.3",
]
test = [
    "pytest>=7.1.3",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.8.2",
    "pytest-instafail>=0.4.2",
    "pytest-order>=1.0.1",
    "pytest-picked>=0.4.6",
    "pytest-sugar>=0.9.5",
    "pytest-html>=3.1.1",
    "pytest-xdist[psutil]>=3.2",
    "tox-pdm>=0.6.1,<1.0.0",
]

[tool.pdm.scripts]
site_packages = true
doc.shell = """\
    mkdir -p htmldoc/basilisk_mockup
    pdoc --html --force --config latex_math=True --template-dir docs/template -o htmldoc basilisk_mockup
    coverage html -d htmldoc/coverage --rcfile tests/coverage.conf
    docstr-coverage basilisk_mockup -miP -sp -is -idel --skip-file-doc --exclude ".*/kt.*.py" --badge=htmldoc/basilisk_mockup/doc_badge.svg
    coverage-badge -f -o htmldoc/basilisk_mockup/cov_badge.svg
"""
