[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
          --cov swig_example_demo
python_files = tests/*

[coverage:run]
omit = **/example.py
       **/stl_example.py
